--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body >
 
   <section class="colored-section" id="title">
     <div class="container-fluid">
@@ -53,7 +53,7 @@
     <!-- Title -->
 
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-6 ">
       <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
       <button type="button" class="btn btn-dark btn-lg download button"><i class="fab fa-apple"></i> Download</button>
       <button type="button" class="btn btn-outline-light btn-lg  download button"><i class="fab fa-google-play"></i> Download</button>
@@ -70,11 +70,11 @@
 
   <!-- Features -->
 
-  <section class="white-section" id="features">
+  <section class="white-section col-sm-12" id="features">
     
-    <div class="container-fluid">
-    <div class="row">
-    <div class="feature-box col-lg-4">
+    <!-- <div class="container-fluid"> -->
+    <div class="row ">
+    <div class="feature-box col-lg-4 ">
     <i class="icon fas fa-check-circle fa-4x" ></i>
     <h3 class="feature-title">Easy to use.</h3>
     <p>So easy to use, even your dog could do it.</p>
@@ -149,7 +149,7 @@ data-pause="hover">
 
    <div class="row">
 
-    <div class="pricing-column col-lg-4 col-md-6">
+    <div class="pricing-column col-lg-4  ">
     <div class="card ">
       <div class="card-header">
         <h3>Chihuahua</h3>
@@ -164,7 +164,7 @@ data-pause="hover">
     </div>
   </div>
     
-  <div class="pricing-column col-lg-4 col-md-6">
+  <div class="pricing-column col-lg-4 ">
     <div class="card">
       <div class="card-header">
         <h3>Labrador</h3>
@@ -179,7 +179,7 @@ data-pause="hover">
     </div>
   </div>
 
-    <div class="pricing-column col-lg-4 ">
+    <div class="pricing-column col-lg-4  ">
     <div class="card">
       <div class="card-header">
         <h3>Mastiff</h3>
