--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=0.8">
   <title>TinDog</title>
 
   <!-- Google fonts -->
@@ -59,7 +60,7 @@
       <button type="button" class="btn btn-outline-light btn-lg  download button"><i class="fab fa-google-play"></i> Download</button>
     </div>
     
-      <div class="col-lg-6">
+      <div class="col-lg-6 ">
         <img class="title-image"  src="images/iphone6.png" alt="iphone-mockup">
       </div>
       </div>
@@ -142,13 +143,12 @@ data-pause="hover">
 
   <!-- Pricing -->
 
-  <section class="white-section" id="pricing">
+  <section class="white-section " id="pricing">
 
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
-   <div class="row">
-
+  <div class="row">
     <div class="pricing-column col-lg-4  ">
     <div class="card ">
       <div class="card-header">
