--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=0.8">
   <title>TinDog</title>
 
   <!-- Google fonts -->
@@ -164,7 +165,7 @@ data-pause="hover">
     </div>
   </div>
     
-  <div class="pricing-column col-lg-4 col-md-6 col-sm-4">
+  <div class="pricing-column col-lg-4 col-md-6 ">
     <div class="card">
       <div class="card-header">
         <h3>Labrador</h3>
@@ -179,7 +180,7 @@ data-pause="hover">
     </div>
   </div>
 
-    <div class="pricing-column col-lg-4 col-sm-12">
+    <div class="pricing-column col-lg-4 ">
     <div class="card">
       <div class="card-header">
         <h3>Mastiff</h3>
